--- a/FirstProject/css/style.css
+++ b/FirstProject/css/style.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+﻿@charset "UTF-8";
 /* Fonts */
 @font-face {
   font-family: "ProximaNova_bold";
@@ -244,7 +244,9 @@ section {
   .main {
     background-position: top left;
   }
-
+.main-content h1 {
+	font-size: 2.5rem;
+}
   .header {
     text-align: center;
     height: auto;
